--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 				appid: "21e95140d8a04113a265999aedde6568",
 				// Optionally to secure Journal's access, use an OAuth application ID (example: 6gyOg377fLUhUk6f)
 				// User will need to sign-in to access the viewer even if your application is public
-				oAuthAppId: "",
+				oAuthAppId: "5ELG8LDjB7j7TPUr",
 				// Optionally, to use the appid URL parameter, configure authorizedOwners to reference
 				//    members whose stories can be viewed by this storytelling app.
 				// To authorize stories owned by...
