Revert "Remove appid config"
This reverts commit edf895c30cf3b810dd531fa9af6ee4cb6724e05c.

--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,13 @@
 			//-------------------------------------------------------------------------------------------
 			//     Application configuration (ignored on ArcGIS Online, Portal and during development)
 			//-------------------------------------------------------------------------------------------	
+            function getURLParameter(name) {
+              return decodeURIComponent((new RegExp('[?|&]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search) || [null, ''])[1].replace(/\+/g, '%20')) || null;
+            }
           
             var configOptions = {
 				// Enter an application ID created through the Map Journal builder
+				appid: getURLParameter('appid'),
 				// Optionally to secure Journal's access, use an OAuth application ID (example: 6gyOg377fLUhUk6f)
 				// User will need to sign-in to access the viewer even if your application is public
 				oAuthAppId: "5ELG8LDjB7j7TPUr",
